Use Java 11 features