@@ -2,7 +2,6 @@ package name.remal.gradle_plugins.classes_relocation.relocator.reachability;
 
 import static lombok.AccessLevel.PRIVATE;
 
-import com.google.common.collect.ImmutableList;
 import java.util.List;
 import lombok.NoArgsConstructor;
 import name.remal.gradle_plugins.classes_relocation.relocator.api.ClassReachabilityConfig;
@@ -10,7 +9,7 @@ import name.remal.gradle_plugins.classes_relocation.relocator.api.ClassReachabil
 @NoArgsConstructor(access = PRIVATE)
 public abstract class ReachabilityConfigDefaults {
 
-    public static final List<ClassReachabilityConfig> DEFAULT_CLASS_REACHABILITY_CONFIGS = ImmutableList.of(
+    public static final List<ClassReachabilityConfig> DEFAULT_CLASS_REACHABILITY_CONFIGS = List.of(
         ClassReachabilityConfig.builder()
             .classInternalName("org/xmlresolver/loaders/XmlLoader")
             .onReachedClassInternalName("org/xmlresolver/ResolverFeature")
